Added see more btn

--- a/index.html
+++ b/index.html
@@ -290,10 +290,12 @@
             </div>
           </div>
         </div>
-        <!-- <a href="" class="see-more-btn"
-          >See more <i class="fas fa-arrow-right"></i
-        ></a> -->
+        <div class="see-more-btn">
+          <a href="">See more <i class="fas fa-arrow-right"></i></a>
+        </div>
       </section>
+
+      <!-- see more button  -->
 
       <!-- bonus section  -->
 
