Added Best Selling products

--- a/index.html
+++ b/index.html
@@ -300,11 +300,43 @@
       <!-- bonus section  -->
 
       <section class="best-selling-products-container">
+        <h2 class="product-title">Best Selling Products</h2>
         <div class="best-selling-products">
           <div class="best-selling-product">
             <img src="assets/images/drone.png" alt="" />
             <p>Drone</p>
           </div>
+          <div class="best-selling-product">
+            <img src="assets/images/camera2.png" alt="" />
+            <p>Camera</p>
+          </div>
+          <div class="best-selling-product">
+            <img src="assets/images/mic.png" alt="" />
+            <p>Microphone</p>
+          </div>
+          <div class="best-selling-product">
+            <img src="assets/images/airpod.png" alt="" />
+            <p>Airbuds</p>
+          </div>
+          <div class="best-selling-product">
+            <img src="assets/images/action.png" alt="" />
+            <p>Action cam</p>
+          </div>
+          <div class="best-selling-product">
+            <img src="assets/images/lights.png" alt="" />
+            <p>Lights</p>
+          </div>
+          <div class="best-selling-product">
+            <img src="assets/images/setup.png" alt="" />
+            <p>Setup</p>
+          </div>
+          <div class="best-selling-product">
+            <img src="assets/images/gear.png" alt="" />
+            <p>Gear</p>
+          </div>
+        </div>
+        <div class="see-more-btn">
+          <a href="">See more <i class="fas fa-arrow-right"></i></a>
         </div>
       </section>
     </main>
