--- a/index.html
+++ b/index.html
@@ -343,10 +343,18 @@
 
     <!-- footer section  -->
     <footer>
-      <a href=""><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-twitter"></i></a>
-      <a href=""><i class="fab fa-facebook"></i></a>
-      <a href=""><i class="fab fa-youtube"></i></a>
+      <div class="footer-info">
+        <h2>Influencer products</h2>
+        <p>
+          Copyright &copy; 2022 mehrab(to0th_less) <br />All rights reserved
+        </p>
+      </div>
+      <div class="links">
+        <a href=""><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-twitter"></i></a>
+        <a href=""><i class="fab fa-facebook"></i></a>
+        <a href=""><i class="fab fa-youtube"></i></a>
+      </div>
     </footer>
   </body>
 </html>
